<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">


    <parent>
        <groupId>name.pehl</groupId>
        <artifactId>superpom</artifactId>
        <version>21</version>
    </parent>


    <modelVersion>4.0.0</modelVersion>
    <artifactId>karaka</artifactId>
    <version>0.4-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Karaka</name>
    <description>Time Recording</description>
    <url>http://hpehl.github.com/karaka/</url>
    <scm>
        <connection>scm:git:git@github.com:hpehl/karaka.git</connection>
        <developerConnection>scm:git:git@github.com:hpehl/karaka.git</developerConnection>
        <url>git@github.com:hpehl/karaka.git</url>
    </scm>


    <properties>
        <gae.version>1.8.0</gae.version>
        <gin.version>2.0.0</gin.version>
        <guava.version>14.0.1</guava.version>
        <gwt.version>2.5.1</gwt.version>
        <gwt.plugin.version>2.5.1</gwt.plugin.version>
        <gwtp.version>1.0-RC-3.1</gwtp.version>
        <objectify.version>4.0rc1</objectify.version>
        <piriti.version>0.10</piriti.version>
        <resteasy.version>3.0-beta-6</resteasy.version>
        <slf4j.version>1.7.5</slf4j.version>
        <totoe.version>0.6</totoe.version>
        <weld.version>2.0.1.Final</weld.version>
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
    </properties>


    <dependencies>
        <!-- Eat your own dogfood ;-) -->
        <dependency>
            <groupId>name.pehl</groupId>
            <artifactId>piriti-dev</artifactId>
            <version>${piriti.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>name.pehl</groupId>
            <artifactId>piriti-user</artifactId>
            <version>${piriti.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>name.pehl</groupId>
            <artifactId>totoe</artifactId>
            <version>${totoe.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- GAE -->
        <dependency>
            <groupId>com.google.appengine</groupId>
            <artifactId>appengine-api-1.0-sdk</artifactId>
            <version>${gae.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.appengine</groupId>
            <artifactId>appengine-jsr107cache</artifactId>
            <version>${gae.version}</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jsr107cache</groupId>
            <artifactId>jsr107cache</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- GWT -->
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwt.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-dev</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-codeserver</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- GWTP -->
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-clients-common</artifactId>
            <version>${gwtp.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-dispatch-shared</artifactId>
            <version>${gwtp.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-dispatch-client</artifactId>
            <version>${gwtp.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-dispatch-server</artifactId>
            <version>${gwtp.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-dispatch-server-guice</artifactId>
            <version>${gwtp.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-dispatch-test</artifactId>
            <version>${gwtp.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-mvp-client</artifactId>
            <version>${gwtp.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-processors</artifactId>
            <version>${gwtp.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.gwtplatform</groupId>
            <artifactId>gwtp-tester</artifactId>
            <version>${gwtp.version}</version>
        </dependency>

        <!-- Other GWT stuff -->
        <dependency>
            <groupId>org.fusesource.restygwt</groupId>
            <artifactId>restygwt</artifactId>
            <version>1.3.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.moxieapps.gwt</groupId>
            <artifactId>highcharts</artifactId>
            <version>1.5.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/org.moxieapps.gwt.highcharts-1.5.0.jar</systemPath>
        </dependency>

        <!-- DI -->
        <dependency>
            <groupId>org.jboss.weld.servlet</groupId>
            <artifactId>weld-servlet</artifactId>
            <version>${weld.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.google.gwt.inject</groupId>
            <artifactId>gin</artifactId>
            <version>${gin.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- RestEasy -->
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-jaxrs</artifactId>
            <version>${resteasy.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-cdi</artifactId>
            <version>${resteasy.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-jackson2-provider</artifactId>
            <version>${resteasy.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-cache-core</artifactId>
            <version>${resteasy.version}</version>
        </dependency>

        <!-- Misc -->
        <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>persistence-api</artifactId>
            <version>1.0.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>xalan</groupId>
            <artifactId>xalan</artifactId>
            <version>2.7.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava-gwt</artifactId>
            <version>${guava.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava-testlib</artifactId>
            <version>${guava.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.objectify</groupId>
            <artifactId>objectify</artifactId>
            <version>${objectify.version}</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.2</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.allen-sauer.gwt.log</groupId>
            <artifactId>gwt-log</artifactId>
            <version>3.2.1</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <build>
        <!-- Generate compiled stuff in the folder used for developing mode -->
        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>


        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>2.3</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>gwt-maven-plugin</artifactId>
                    <version>${gwt.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.google.appengine</groupId>
                    <artifactId>appengine-maven-plugin</artifactId>
                    <version>${gae.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.bsc.maven</groupId>
                    <artifactId>maven-processor-plugin</artifactId>
                    <version>2.2.3</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>1.2</version>
                </plugin>
            </plugins>
        </pluginManagement>


        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>src/main/webapp/karaka</directory>
                        </fileset>
                        <fileset>
                            <directory>src/main/webapp/WEB-INF/deploy</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <compilerArgument>-proc:none</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <format>{0,number} at {1,date,yyyy-MM-dd HH:mm:ss}</format>
                    <items>
                        <item>buildNumber</item>
                        <item>timestamp</item>
                    </items>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.bsc.maven</groupId>
                <artifactId>maven-processor-plugin</artifactId>
                <executions>
                    <execution>
                        <id>process</id>
                        <goals>
                            <goal>process</goal>
                        </goals>
                        <phase>generate-sources</phase>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.gwtplatform</groupId>
                        <artifactId>gwtp-processors</artifactId>
                        <version>${gwtp.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <configuration>
                    <module>name.pehl.karaka.Karaka</module>
                    <runTarget>/index.html</runTarget>
                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
                    <appEngineVersion>${gae.version}</appEngineVersion>
                    <server>com.google.appengine.tools.development.gwt.AppEngineLauncher</server>
                    <extraJvmArgs>-Xmx1024m -XX:MaxPermSize=256M</extraJvmArgs>
                    <style>OBF</style>
                    <localWorkers>4</localWorkers>
                    <compileReport>false</compileReport>
                    <disableCastChecking>true</disableCastChecking>
                    <disableClassMetadata>false</disableClassMetadata>
                    <enableClosureCompiler>true</enableClosureCompiler>
                    <fragmentCount>30</fragmentCount>
                    <port>8888</port>
                    <logLevel>INFO</logLevel>
                    <strict>true</strict>
                    <i18nConstantsBundles>
                        <i18nConstantsBundle>
                            name.pehl.karaka.client.resources.Constants
                        </i18nConstantsBundle>
                    </i18nConstantsBundles>
                    <i18nConstantsWithLookupBundles>
                        <i18nConstantsWithLookupBundle>
                            name.pehl.karaka.client.resources.Enums
                        </i18nConstantsWithLookupBundle>
                    </i18nConstantsWithLookupBundles>
                    <i18nMessagesBundles>
                        <i18nMessagesBundles>
                            name.pehl.karaka.client.resources.Messages
                        </i18nMessagesBundles>
                    </i18nMessagesBundles>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>i18n</goal>
                            <goal>compile</goal>
                            <goal>resources</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <webResources>
                        <resource>
                            <directory>src/main/webapp/WEB-INF</directory>
                            <targetPath>WEB-INF</targetPath>
                            <filtering>true</filtering>
                            <includes>
                                <include>about.properties</include>
                            </includes>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.google.appengine</groupId>
                <artifactId>appengine-maven-plugin</artifactId>
            </plugin>
        </plugins>


        <extensions>
            <extension>
                <groupId>org.kuali.maven.wagons</groupId>
                <artifactId>maven-s3-wagon</artifactId>
                <version>1.1.14</version>
            </extension>
        </extensions>
    </build>
</project>
